libs/@local/hashql/eval/tests/ui/graph/read/entity/field-in-dict-key.jsonc
//@ run: fail
//@ description: Paths inside data constructs are unsupported
// biome-ignore format: readability
["::graph::tail::collect",
  ["::graph::body::filter",
    ["::graph::head::entities", ["::graph::tmp::decision_time_now"]],
    ["fn", { "#tuple": [] }, { "#struct": { "vertex": "_" } }, "_",
      ["==",
        ["[]",
          {"#dict": [["vertex.id.entity_id.entity_uuid", {"#literal": "a"}]]},
          //~^ ERROR path expressions are not supported in data constructs
          ["::graph::types::knowledge::entity::EntityUuid", ["::core::uuid::Uuid", {"#literal": "a"}]]
        ],
        "vertex.id.entity_id.entity_uuid"
      ]
    ]
  ]
]
